--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,58 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-412a"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
+   <script>
+function download(filename, text) {
+    var element = document.createElement('a');
+    element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+    element.setAttribute('download', filename);
+
+    element.style.display = 'none';
+    document.body.appendChild(element);
+
+    element.click();
+
+    document.body.removeChild(element);
+}
+
+// Start file download.
+document.getElementById("dwn-btn").addEventListener("click", function(){
+    // Generate download of hello.txt file with some content
+    var text = document.getElementById("text-val").value;
+    var filename = "hello.txt";
+    
+    download(filename, text);
+}, false);
+
+   </script>
+   <script>
+
+
+var doc = new jsPDF();
+
+function saveDiv(divId) {
+ doc.fromHTML(`<html><body>` + document.getElementById(divId).innerHTML + `</body></html>`);
+ doc.save('div.pdf');
+}
+
+function printDiv(divId) {
+
+ let mywindow = window.open('', 'PRINT', 'height=650,width=900,top=100,left=150');
+
+ mywindow.document.write('</head><body >');
+ mywindow.document.write(document.querySelector("#text-val > textarea").innerHTML);
+ mywindow.document.write('</body></html>');
+
+ mywindow.document.close(); // necessary for IE >= 10
+ mywindow.focus(); // necessary for IE >= 10*/
+
+ mywindow.print();
+ mywindow.close();
+
+ return true;
+}
+   </script>
+    <a href="" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
           <img src="{{ url_for('static', filename='images/c267f3ce97e6dd79975da8d5128630d3fe89635fafdcb1d683e63faf6b4c71ee632313c7288461520d2559f298e089f5e0d25aa91c8704506e1bbd_1280.png')}}" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -67,18 +118,18 @@
         <h2 class="u-text u-text-1">📖&nbsp; &nbsp;BTS starts here :</h2>
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
-              <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
-                <textarea class="u-text u-text-grey-40 u-text-2">Hey... I'am so excited to start with you to write a new story !!!
+            <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
+              <div id="text-val" rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
+                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5">Hey... I'am so excited to start with you to write a new story !!!
                 </textarea>
               </div>
             </div>
           </div>
         </div>
-        <a href="" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
-        <a href="" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-2">SHARE MY STORY</a>
-        <a href="" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-palette-1-base u-radius-1 u-btn-3"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64    c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472    c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z"></path><path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"></path></svg><img></span>&nbsp;Download BTS
-        </a>
+        <a onclick="saveDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
+        <a onclick="printDiv('pdf')" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-2">PRINT MY STORY</a>
+        <a id="dwn-btn" class="u-btn u-button-style u-custom-color-1 u-hover-palette-1-base u-radius-1 u-btn-3">DOWNLOAD BTS</a>
+        <!-- <input type="button" id="dwn-btn" value="Download dinamically generated text file"/> -->
       </div>
     </section>
     <section class="u-clearfix u-section-2" id="sec-e56b">
