--- a/templates/index.html
+++ b/templates/index.html
@@ -69,18 +69,17 @@
         <h2 class="u-text u-text-1">📖&nbsp; &nbsp;BTS starts here :</h2>
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
+            <a onclick="Add Prediction to Textarea" class="u-btn u-btn-round" style="min-width: 100% !important;">Placeholder for Pred</a>
             <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div id="text-val" rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
-                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Hey... I'am so excited to start with you to write a new story !!!
-                </textarea>
+                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Hey... I'm so excited to start with you to write a new story !!!</textarea>
               </div>
             </div>
           </div>
         </div>
         <a class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
-        <a onclick="printDiv('pdf')" class="u-btn u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-2">PRINT MY STORY</a>
-        <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-button-style u-custom-color-1 u-hover-palette-1-base u-radius-1 u-btn-3">DOWNLOAD BTS</a>
-        <!-- <input type="button" id="dwn-btn" value="Download dinamically generated text file"/> -->
+        <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
+        <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
       </div>
     </section>
 
