--- a/templates/index.html
+++ b/templates/index.html
@@ -68,14 +68,21 @@
     <section class="u-align-center u-clearfix u-section-1" id="carousel_3a27">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2>📖&nbsp; &nbsp;BTS starts here :</h2>
+          <!-- <b>Response Status :</b> -->
+          <div id="result">
+          </div>
+          <br/>
+          <b></b>
+          <!-- <div id="result_json">
+          </div> -->
         <div class="btn-list">
-          <a class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
+          <a onclick="callWs()" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
           <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
           <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
         </div>
         <div>
           <div class="u-repeater u-repeater-1">
-            <a onclick="Add Prediction to Textarea" class="u-btn u-btn-round" style="min-width: 100% !important;">Placeholder for Pred</a>
+            <a id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Placeholder for Pred</a>
             <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
                 <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Hey... I'm so excited to start with you to write a new story !!!</textarea>
@@ -159,6 +166,23 @@
 
           return true;
         }
+    </script>
+    <script>
+      callWs = function(){
+	// The Endpoint URL
+	let url = 'https://jsonplaceholder.typicode.com/posts/1';
+	fetch(url)
+  .then(function(response) {
+  	// Render the Response Status
+  	document.getElementById('result').innerHTML = response.status;
+    // Parse the body as JSON
+    return response.json();
+  })
+  .then(function(json) {
+  	// Render the parsed body
+  	document.getElementById('result_json').innerHTML = JSON.stringify(json);
+  })
+}
     </script>
   </body>
 </html>
