reformatting Home Page

--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
     <script>
       callWs = function(){
 	// The Endpoint URL
-	let url = 'https://jsonplaceholder.typicode.com/posts/1';
+	let url = 'https://taxifare.lewagon.ai/predict_fare/';
 	fetch(url)
   .then(function(response) {
   	// Render the Response Status
