--- a/templates/Home.html
+++ b/templates/Home.html
@@ -26,66 +26,72 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-412a"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://www.lewagon.com/shanghai" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
-          <img src="{{ url_for('static', filename='images/c267f3ce97e6dd79975da8d5128630d3fe89635fafdcb1d683e63faf6b4c71ee632313c7288461520d2559f298e089f5e0d25aa91c8704506e1bbd_1280.png')}}" class="u-logo-image u-logo-image-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body">
+    <header class="u-clearfix u-header u-header" id="sec-412a">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <a href="" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
+            <img src="{{ url_for('static', filename='images/c267f3ce97e6dd79975da8d5128630d3fe89635fafdcb1d683e63faf6b4c71ee632313c7288461520d2559f298e089f5e0d25aa91c8704506e1bbd_1280.png')}}" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-          <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</symbol>
-</defs></svg>
-            </a>
-          </div>
-          <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1">
-              <li class="u-nav-item">
-                <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
-              </li>
-              <li class="u-nav-item">
-                <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
-              </li>
-              <li class="u-nav-item">
-                <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
-                  </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html" style="padding: 10px 20px;">About</a>
-                  </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 20px;">Contact</a>
-                  </li>
-                </ul>
-              </div>
+            <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
+              <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+                <svg viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
+  </symbol>
+  </defs></svg>
+              </a>
             </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
+            <div class="u-custom-menu u-nav-container">
+              <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
+  </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
+  </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
+  </li></ul>
+            </div>
+            <div class="u-custom-menu u-nav-container-collapse">
+              <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+                <div class="u-inner-container-layout u-sidenav-overflow">
+                  <div class="u-menu-close"></div>
+                  <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
+  </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html" style="padding: 10px 20px;">About</a>
+  </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 20px;">Contact</a>
+  </li></ul>
+                </div>
+              </div>
+              <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+            </div>
         </nav>
-      </div></header>
+      </div>
+    </header>
+    <!-- class="u-text u-text-1" -->
+    <!-- class="u-list u-list-1" -->
     <section class="u-align-center u-clearfix u-section-1" id="carousel_3a27">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-1">📖&nbsp; &nbsp;BTS starts here :</h2>
-        <div class="u-list u-list-1">
+        <h2>📖&nbsp; &nbsp;BTS starts here :</h2>
+          <!-- <b>Response Status :</b> -->
+          <div id="result">
+          </div>
+          <br/>
+          <b></b>
+          <!-- <div id="result_json">
+          </div> -->
+        <div class="btn-list">
+          <a onclick="callWs()" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
+          <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
+          <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
+        </div>
+        <div>
           <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
-              <div class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
-                <textarea id="prompt" class="u-text u-text-grey-40 u-text-2">Hey... I'am so excited to start with you to write a new story !!!
-                </textarea>
+            <a id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Placeholder for Pred</a>
+            <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
+              <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
+                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Hey... I'm so excited to start with you to write a new story !!!</textarea>
               </div>
             </div>
           </div>
         </div>
-        <button type="submit" id="get-bts-button" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</button>
-        <a href="https://www.lewagon.com/shanghai" class="u-btn u-btn-round u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-2">SHARE MY STORY</a>
-        <a id="saveToFile" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-palette-1-base u-radius-1 u-btn-3"><span class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64    c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472    c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z"></path><path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"></path></svg><img></span>&nbsp;Download BTS
-        </a>
       </div>
     </section>
+
     <section class="u-clearfix u-section-2" id="sec-e56b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
@@ -106,6 +112,7 @@
         </div>
       </div>
     </section>
+
     <section class="u-align-center u-clearfix u-image u-shading u-section-3" src="" data-image-width="1346" data-image-height="896" id="sec-3146">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-title u-text-1">DATA SCIENCE TEAM BTS</h1>
@@ -120,28 +127,61 @@
         </p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://www.lewagon.com/shanghai" target="_blank">
+      <a class="u-link" href="" target="_blank">
         <span>Website Templates</span>
       </a>
       <p class="u-text">
         <span>created with</span>
       </p>
-      <a class="u-link" href="" target="_blank">
+      <a class="u-link" href="https://www.wsj.com/articles/SB10001424052748703344704574610002061841322" target="_blank">
         <span>Website Builder Software</span>
       </a>. 
     </section>
-<script>
-$(function() 
-{
-  $('#saveToFile').click(function(e) {
-    var data = document.getElementById('prompt').value;
-    var data = 'data:application/csv;charset=utf-8,' + encodeURIComponent(data);
-    var el = e.currentTarget;
-    el.href = data;
-    el.target = '_blank';
-    el.download = 'data.csv';
-  });
-});
-</script>
-</body>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
+    <script>
+        var doc = new jsPDF();
+
+        function saveDiv(divId, title) {
+          let userText = document.getElementById('text-val').value;
+          doc.text(userText, 10, 10, {maxWidth: 150})
+          doc.save('BTS.pdf');
+        }
+
+
+        function printDiv(divId) {
+
+          let mywindow = window.open('', 'PRINT', 'height=650,width=900,top=100,left=150');
+
+          mywindow.document.write('</head><body >');
+          mywindow.document.write(document.getElementById('text-val').value);
+          mywindow.document.write('</body></html>');
+
+          mywindow.document.close(); // necessary for IE >= 10
+          mywindow.focus(); // necessary for IE >= 10*/
+
+          mywindow.print();
+          mywindow.close();
+
+          return true;
+        }
+    </script>
+    <script>
+      callWs = function(){
+	// The Endpoint URL
+	let url = 'https://taxifare.lewagon.ai/predict_fare/';
+	fetch(url)
+  .then(function(response) {
+  	// Render the Response Status
+  	document.getElementById('result').innerHTML = response.status;
+    // Parse the body as JSON
+    return response.json();
+  })
+  .then(function(json) {
+  	// Render the parsed body
+  	document.getElementById('result_json').innerHTML = JSON.stringify(json);
+  })
+}
+    </script>
+  </body>
 </html>
