styling About Page

--- a/templates/About.html
+++ b/templates/About.html
@@ -59,7 +59,9 @@
       </div></header> 
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-9ed1"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-clearfix u-footer u-grey-80 u-footer" style="text-align: justify;"><div class="u-clearfix u-sheet u-sheet-1">
+      <br>
+      <br>
       <p>Is the Tooth Fairy real? How about the garbage man? Those questions may seem trivial, but how young children answer them is an important indicator of cognitive development.
 
         For years, imagination was thought of as a way for children to escape from reality, and once they reached a certain age, it was believed they would push fantasy aside and deal with the real world. But, increasingly, child-development experts are recognizing the importance of imagination and the role it plays in understanding reality. Imagination is necessary for learning about people and events we don't directly experience, such as history or events on the other side of the world. For young kids, it allows them to ponder the future, such as what they want to do when they grow up.</p>  
