--- a/templates/Home.html
+++ b/templates/Home.html
@@ -84,7 +84,7 @@
             <a id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Placeholder for Pred</a>
             <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
-                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Hey... I'm so excited to start with you to write a new story !!!</textarea>
+                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Once upon a time, </textarea>
               </div>
             </div>
           </div>
