API CN on Index Page and API Google implemented on Home Page

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -169,15 +169,15 @@
     <script>
       callWs = function(){
 	// The Endpoint URL
-	// let ur = 'https://bts-gpt2-api-56chpffh5q-uc.a.run.app/';
+	// Google API
   var prompt = document.getElementById('text-val').value;
-  let url = `https://bts-gpt2-api-56chpffh5q-uc.a.run.app/prompt=${prompt}`;
+  let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=10&nsamples=1&temperature=0.7`;
 
 	fetch(url)
   .then(response => response.json())
   .then(data => {
     // Need to update the key from the JSON file once the API will be working (data.ok must be different)
-    document.getElementById('result_json').innerText = data.prompt;
+    document.getElementById('result_json').innerText = data.text;
   // })
   // .then(function(response) {
   // 	// Render the Response Status
