--- a/templates/Home.html
+++ b/templates/Home.html
@@ -79,9 +79,15 @@
           <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
           <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
         </div>
+        <br/>
+
+        <div class="btn-list">
+          <a onclick=""  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">SPEAK</a>
+          <a onclick=""  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">LISTEN</a>
+        </div>
         <div>
           <div class="u-repeater u-repeater-1">
-            <a id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Need inspiration 🤔 click on Inspire Me 🔘!</a>
+            <a id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Need inspiration 🤔 click on Inspire Me!</a>
             <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
                 <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Once upon a time, </textarea>
