--- a/templates/Home.html
+++ b/templates/Home.html
@@ -8,6 +8,10 @@
     <title>Home</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/nicepage.css')}}" media="screen">
     <link rel="stylesheet" href="{{url_for('static', filename='css/Home.css')}}" media="screen">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/6.58dc7bb8.chunk.css')}}" media="screen">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/7.9221b8e1.chunk.css')}}" media="screen">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/9.3a13006c.chunk.css')}}" media="screen">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/main.87247447.chunk.css')}}" media="screen">
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/jquery.js')}}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/nicepage.js')}}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/script.js')}}" defer=""></script>
@@ -79,6 +83,15 @@
           <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
           <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
         </div>
+        <br>
+          <div class="slidecontainer">
+            <p>Temperature: <span id="temp"></span></p> 
+            <input type="range" min="0" max="1" value="0.7" step="0.1" class="sliderT" id="myRange">
+          </div>
+          <div>
+            <p>Length: <span id="length"></span></p> 
+            <input type="range" min="10" max="50" value="20" step="10" class="slider" id="myRangeL">
+          </div>
         <br/>
 
         <div class="btn-list">
@@ -177,24 +190,51 @@
 	// The Endpoint URL
 	// Google API
   var prompt = document.getElementById('text-val').value;
-  let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=10&nsamples=1&temperature=0.7`;
+  var length = document.getElementById('myRangeL').value;
+  var temp = document.getElementById('myRange').value;
+  let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=${length}&nsamples=1&temperature=${temp}`;
 
 	fetch(url)
   .then(response => response.json())
   .then(data => {
     // Need to update the key from the JSON file once the API will be working (data.ok must be different)
     document.getElementById('result_json').innerText = data.text;
-  // })
-  // .then(function(response) {
-  // 	// Render the Response Status
-  // 	document.getElementById('result').innerHTML = response.status;
-  //   // Parse the body as JSON
-  //   return response.json();
-  // })
-  // .then(function(json) {
-  // 	// Render the parsed body
-  // 	document.getElementById('result_json').innerHTML = JSON.stringify(json);
   })
+}
+    </script>
+    <script>
+        callLongBTS = function(){
+	// Google API
+  var prompt = document.getElementById('text-val').value;
+  var length = document.getElementById('myRangeL').value;
+  let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=${length}&nsamples=1&temperature=0.7`;
+
+	fetch(url)
+  .then(response => response.json())
+  .then(data => {
+    // Need to update the key from the JSON file once the API will be working (data.ok must be different)
+    document.getElementById('result_json').innerText = data.text;
+  })
+}  
+    </script>
+    <script>
+
+var slidert = document.getElementById("myRange");
+var output = document.getElementById("temp");
+output.innerHTML = slidert.value;
+
+slidert.oninput = function() {
+  output.innerHTML = this.value;
+}
+
+    </script>
+    <script>
+var sliderl = document.getElementById("myRangeL");
+var output = document.getElementById("length");
+output.innerHTML = sliderl.value;
+
+sliderl.oninput = function() {
+  output.innerHTML = this.value;
 }
     </script>
   </body>
