new UI for Home

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -33,7 +33,7 @@
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-412a">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <a href="" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
+        <a onclick="callLongBTS()" class="u-image u-logo u-image-1" data-image-width="1280" data-image-height="1280">
             <img src="{{ url_for('static', filename='images/c267f3ce97e6dd79975da8d5128630d3fe89635fafdcb1d683e63faf6b4c71ee632313c7288461520d2559f298e089f5e0d25aa91c8704506e1bbd_1280.png')}}" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -80,24 +80,26 @@
           </div> -->
         <div class="btn-list">
           <a onclick="callWs()" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
-          <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
-          <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
+          <p>Length: <span name="length" id="length"></span></p><input type="range" min="10" max="50" value="20" step="10" class="sliderl" id="RangeLength">
+          <br>
+          <p>Temperature: <span name="temp" id="temp"></span></p><input type="range" min="0" max="1" value="0.7" step="0.1" class="slidert" id="RangeTemp">
+          <a onclick="">🗣</a>
+          <!-- <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
+          <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a> -->
         </div>
-        <br>
+        <!-- <br>
           <div class="slidecontainer">
-            <p>Temperature: <span id="temp"></span></p> 
-            <input type="range" min="0" max="1" value="0.7" step="0.1" class="slidert" id="myRange">
+            <p>Temperature: <span id="temp"></span></p><input type="range" min="0" max="1" value="0.7" step="0.1" class="slidert" id="myRange">
           </div>
           <div>
-            <p>Length: <span id="length"></span></p> 
-            <input type="range" min="10" max="50" value="20" step="10" class="sliderl" id="myRangeL">
-          </div>
+            <p>Length: <span id="length"></span></p><input type="range" min="10" max="50" value="20" step="10" class="sliderl" id="myRangeL">
+          </div> -->
         <br/>
 
-        <div class="btn-list">
-          <a onclick=""  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">SPEAK</a>
-          <a onclick=""  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">LISTEN</a>
-        </div>
+        <!-- <div class="btn-list">
+          <a onclick=""  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">SPEAK</a> -->
+          <!-- <a onclick=""  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">LISTEN</a> -->
+        <!-- </div> -->
         <div>
           <div class="u-repeater u-repeater-1">
             <a onclick="appPredict()" id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Need inspiration 🤔 click on Inspire Me!</a>
@@ -105,6 +107,11 @@
               <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
                 <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Once upon a time, </textarea>
               </div>
+            </div>
+            <div class="btn-list">
+              <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
+              <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>  
+              <a onclick="" >🎙</a>
             </div>
           </div>
         </div>
@@ -190,8 +197,8 @@
 	// The Endpoint URL
 	// Google API
   var prompt = document.getElementById('text-val').value;
-  var length = document.getElementById('myRangeL').value;
-  var temp = document.getElementById('myRange').value;
+  var length = document.getElementById('RangeLength').value;
+  var temp = document.getElementById('RangeTemp').value;
   let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=${length}&nsamples=1&temperature=${temp}`;
 
 	fetch(url)
@@ -206,8 +213,8 @@
         callLongBTS = function(){
 	// Google API
   var prompt = document.getElementById('text-val').value;
-  var length = document.getElementById('myRangeL').value;
-  let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=${length}&nsamples=1&temperature=0.7`;
+  // var length = document.getElementById('RangeLength').value;
+  let url = `https://bts-api-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=200&nsamples=1&temperature=0.7`;
 
 	fetch(url)
   .then(response => response.json())
@@ -219,7 +226,7 @@
     </script>
     <script>
 
-var slidert = document.getElementById("myRange");
+var slidert = document.getElementById("RangeTemp");
 var output = document.getElementById("temp");
 output.innerHTML = slidert.value;
 
@@ -229,7 +236,7 @@ slidert.oninput = function() {
 
     </script>
     <script>
-var sliderl = document.getElementById("myRangeL");
+var sliderl = document.getElementById("RangeLength");
 var output = document.getElementById("length");
 output.innerHTML = sliderl.value;
 
